tests/templates/inaccel.yaml
apiVersion: v1
kind: Pod
metadata:
  name: inaccel-vadd
spec:
  containers:
  - image: inaccel/vadd
    name: inaccel-vadd
    resources:
      limits:
        xilinx/aws-vu9p-f1: 1
    volumeMounts:
    - mountPath: /var/lib/inaccel
      name: inaccel
  initContainers:
  - args:
    - bitstream
    - install
    - https://store.inaccel.com/artifactory/bitstreams/xilinx/aws-vu9p-f1/shell-v04261818_201920.2/aws/vector/1/1addition
    image: inaccel/cli
    name: init
    volumeMounts:
    - mountPath: /var/lib/inaccel
      name: inaccel
  nodeSelector:
    xilinx/aws-vu9p-f1: shell-v04261818_201920.2
  restartPolicy: OnFailure
  volumes:
  - csi:
      driver: inaccel
    name: inaccel
