tests/templates/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  containers:
  - name: nginx
    image: docker.mirrors.ustc.edu.cn/nginx:latest
  restartPolicy: Always
